[gd_scene load_steps=63 format=3 uid="uid://tg2fgqghhh5c"]

[ext_resource type="Texture2D" uid="uid://upsvvtfj213" path="res://assets/Characters/Squid/DEATHSQUID/DEATHSQUID_0000.png" id="1_3rxdx"]
[ext_resource type="Texture2D" uid="uid://c84l7pb8dmrsw" path="res://assets/Characters/Squid/PROJECTILES/projectile1_0000.png" id="1_5tmlc"]
[ext_resource type="Script" uid="uid://cyet2hcxx2eof" path="res://scenes/Characters/boss_2.gd" id="1_7dr81"]
[ext_resource type="Texture2D" uid="uid://b6h2bpih5a1p5" path="res://assets/Characters/Squid/PROJECTILES/projectile1_0001.png" id="2_7dr81"]
[ext_resource type="Texture2D" uid="uid://2t1fafkwx6cu" path="res://assets/Characters/Squid/DEATHSQUID/DEATHSQUID_0001.png" id="2_kb62t"]
[ext_resource type="Texture2D" uid="uid://dkobpwvo4fe5k" path="res://assets/Characters/Squid/DEATHSQUID/DEATHSQUID_0002.png" id="3_4xl3b"]
[ext_resource type="Texture2D" uid="uid://jhgit1dwdd4l" path="res://assets/Characters/Squid/PROJECTILES/projectile1_0002.png" id="3_sciys"]
[ext_resource type="Texture2D" uid="uid://b6k2t5fiirbib" path="res://assets/Characters/Squid/DEATHSQUID/DEATHSQUID_0003.png" id="4_uw1t7"]
[ext_resource type="Texture2D" uid="uid://cn2htd2gxv1it" path="res://assets/Characters/Squid/PROJECTILES/projectile1_0003.png" id="4_xok1n"]
[ext_resource type="Texture2D" uid="uid://cfhchsobcc3rw" path="res://assets/Characters/Squid/DEATHSQUID/DEATHSQUID_0004.png" id="5_kkd70"]
[ext_resource type="Texture2D" uid="uid://b3e1utuaayce" path="res://assets/Characters/Squid/PROJECTILES/projectile1_0004.png" id="5_osqvv"]
[ext_resource type="Texture2D" uid="uid://c6iuvchkgnee6" path="res://assets/Characters/Squid/PROJECTILES/projectile1_0005.png" id="6_dp0gl"]
[ext_resource type="Texture2D" uid="uid://bb8u3hvkhxs87" path="res://assets/Characters/Squid/DEATHSQUID/DEATHSQUID_0005.png" id="6_isgq6"]
[ext_resource type="Texture2D" uid="uid://dc0fpmp4aa0fv" path="res://assets/Characters/Squid/DEATHSQUID/DEATHSQUID_0006.png" id="7_f3q33"]
[ext_resource type="Texture2D" uid="uid://by7jf6sb176hv" path="res://assets/Characters/Squid/PROJECTILES/projectile1_0006.png" id="7_mqhe2"]
[ext_resource type="Texture2D" uid="uid://babiaul3v6utw" path="res://assets/Characters/Squid/DEATHSQUID/DEATHSQUID_0007.png" id="8_7y8xt"]
[ext_resource type="Texture2D" uid="uid://c2sc4a5awgap3" path="res://assets/Characters/Squid/PROJECTILES/projectile1_0007.png" id="8_pkb6s"]
[ext_resource type="Texture2D" uid="uid://cuy7lt56kv73" path="res://assets/Characters/Squid/PROJECTILES/projectile1_0008.png" id="9_0ca6u"]
[ext_resource type="Texture2D" uid="uid://roqa6vvwc8b1" path="res://assets/Characters/Squid/DEATHSQUID/DEATHSQUID_0008.png" id="9_rqnne"]
[ext_resource type="Texture2D" uid="uid://besi8ghfmj838" path="res://assets/Characters/Squid/PROJECTILES/projectile1_0009.png" id="10_gqy0c"]
[ext_resource type="Texture2D" uid="uid://bgvhsn6lhyt33" path="res://assets/Characters/Squid/DEATHSQUID/DEATHSQUID_0009.png" id="10_unug7"]
[ext_resource type="Texture2D" uid="uid://f2u1fghpaak" path="res://assets/Characters/Squid/DEATHSQUID/DEATHSQUID_0010.png" id="11_2ed41"]
[ext_resource type="Texture2D" uid="uid://dmdcrjx75gxpm" path="res://assets/Characters/Squid/PROJECTILES/projectile1_0010.png" id="11_vaklv"]
[ext_resource type="Texture2D" uid="uid://c0ehcc3qn1ghv" path="res://assets/Characters/Squid/DEATHSQUID/DEATHSQUID_0011.png" id="12_jd7p5"]
[ext_resource type="Texture2D" uid="uid://corpipt35akvl" path="res://assets/Characters/Squid/DEATHSQUID/DEATHSQUID_0012.png" id="13_golc5"]
[ext_resource type="Texture2D" uid="uid://c754wnhflmgn2" path="res://assets/Characters/Squid/DEATHSQUID/DEATHSQUID_0013.png" id="14_gli2l"]
[ext_resource type="Texture2D" uid="uid://caohdfga2l5y2" path="res://assets/Characters/Squid/DEATHSQUID/DEATHSQUID_0014.png" id="15_fb3uo"]
[ext_resource type="Texture2D" uid="uid://c65uusbapqk3s" path="res://assets/Characters/Squid/SQUID/Squid_IDLE_0000.png" id="16_8ksrf"]
[ext_resource type="Texture2D" uid="uid://btah5n3m76gb6" path="res://assets/Characters/Squid/SQUID_HIT/HIT_0000.png" id="16_f3q33"]
[ext_resource type="Texture2D" uid="uid://cby0p0ks547gr" path="res://assets/Characters/Squid/SQUID_HIT/HIT_0001.png" id="17_7y8xt"]
[ext_resource type="Texture2D" uid="uid://bhi3wmkuklfv7" path="res://assets/Characters/Squid/SQUID/Squid_IDLE_0001.png" id="17_mckc5"]
[ext_resource type="Texture2D" uid="uid://ckbhh6gfo0gf5" path="res://assets/Characters/Squid/SQUID/Squid_IDLE_0002.png" id="18_5tmlc"]
[ext_resource type="Texture2D" uid="uid://c10crpqh4vkmr" path="res://assets/Characters/Squid/SQUID_HIT/HIT_0002.png" id="18_rqnne"]
[ext_resource type="Texture2D" uid="uid://dvvm2kw5cbgx2" path="res://assets/Characters/Squid/SQUID/Squid_IDLE_0003.png" id="19_7dr81"]
[ext_resource type="Texture2D" uid="uid://caxvc1a2wuprx" path="res://assets/Characters/Squid/SQUID_HIT/HIT_0003.png" id="19_unug7"]
[ext_resource type="Texture2D" uid="uid://5nxdywxb3v7b" path="res://assets/Characters/Squid/SQUID_HIT/HIT_0004.png" id="20_2ed41"]
[ext_resource type="Texture2D" uid="uid://ce40bmgnk1kkp" path="res://assets/Characters/Squid/SQUID/Squid_IDLE_0004.png" id="20_sciys"]
[ext_resource type="Texture2D" uid="uid://dtnxpgmdtvbej" path="res://assets/Characters/Squid/SQUID_HIT/HIT_0005.png" id="21_jd7p5"]
[ext_resource type="Texture2D" uid="uid://hkc5ix6ukftx" path="res://assets/Characters/Squid/SQUID/Squid_IDLE_0005.png" id="21_xok1n"]
[ext_resource type="Texture2D" uid="uid://b8hecxx7iqv8l" path="res://assets/Characters/Squid/SQUID/Squid_IDLE_0006.png" id="22_osqvv"]
[ext_resource type="Texture2D" uid="uid://cpory70leubo1" path="res://assets/Characters/Squid/SQUID/Squid_IDLE_0007.png" id="23_dp0gl"]
[ext_resource type="Texture2D" uid="uid://dge13ip3reeph" path="res://assets/Characters/Squid/SQUID/Squid_IDLE_0008.png" id="24_mqhe2"]
[ext_resource type="Texture2D" uid="uid://suiufybcjm2d" path="res://assets/Characters/Squid/SQUID/Squid_IDLE_0009.png" id="25_pkb6s"]
[ext_resource type="Texture2D" uid="uid://gslfv7bckq1p" path="res://assets/Characters/Squid/SQUID/Squid_IDLE_0010.png" id="26_0ca6u"]
[ext_resource type="Texture2D" uid="uid://csa08hyer0b1c" path="res://assets/Characters/Squid/SQUID/Squid_IDLE_0011.png" id="27_gqy0c"]
[ext_resource type="Texture2D" uid="uid://dk6pvn3vcjqgw" path="res://assets/Characters/Squid/SQUID/Squid_IDLE_0012.png" id="28_vaklv"]
[ext_resource type="Texture2D" uid="uid://bkim37ua7crcy" path="res://assets/Characters/Squid/SQUID/Squid_IDLE_0013.png" id="29_cq7rq"]
[ext_resource type="Texture2D" uid="uid://4r0bh3udy14u" path="res://assets/Characters/Squid/SQUID/Squid_IDLE_0014.png" id="30_va7aa"]
[ext_resource type="PackedScene" uid="uid://bal61yb66wts5" path="res://scenes/Characters/squid_projectile.tscn" id="49_sciys"]
[ext_resource type="Script" uid="uid://dktsel320mpw7" path="res://scripts/hurtbox.gd" id="50_osqvv"]
[ext_resource type="FontFile" uid="uid://chvpvepqarnv6" path="res://assets/Fonts/Tedtadpole-Regular.ttf" id="50_xok1n"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cq7rq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_5tmlc")
}, {
"duration": 1.0,
"texture": ExtResource("2_7dr81")
}, {
"duration": 1.0,
"texture": ExtResource("3_sciys")
}, {
"duration": 1.0,
"texture": ExtResource("4_xok1n")
}, {
"duration": 1.0,
"texture": ExtResource("5_osqvv")
}, {
"duration": 1.0,
"texture": ExtResource("6_dp0gl")
}, {
"duration": 1.0,
"texture": ExtResource("7_mqhe2")
}, {
"duration": 1.0,
"texture": ExtResource("8_pkb6s")
}, {
"duration": 1.0,
"texture": ExtResource("9_0ca6u")
}, {
"duration": 1.0,
"texture": ExtResource("10_gqy0c")
}, {
"duration": 1.0,
"texture": ExtResource("11_vaklv")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_1he7j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3rxdx")
}, {
"duration": 1.0,
"texture": ExtResource("2_kb62t")
}, {
"duration": 1.0,
"texture": ExtResource("3_4xl3b")
}, {
"duration": 1.0,
"texture": ExtResource("4_uw1t7")
}, {
"duration": 1.0,
"texture": ExtResource("5_kkd70")
}, {
"duration": 1.0,
"texture": ExtResource("6_isgq6")
}, {
"duration": 1.0,
"texture": ExtResource("7_f3q33")
}, {
"duration": 1.0,
"texture": ExtResource("8_7y8xt")
}, {
"duration": 1.0,
"texture": ExtResource("9_rqnne")
}, {
"duration": 1.0,
"texture": ExtResource("10_unug7")
}, {
"duration": 1.0,
"texture": ExtResource("11_2ed41")
}, {
"duration": 1.0,
"texture": ExtResource("12_jd7p5")
}, {
"duration": 1.0,
"texture": ExtResource("13_golc5")
}, {
"duration": 1.0,
"texture": ExtResource("14_gli2l")
}, {
"duration": 1.0,
"texture": ExtResource("15_fb3uo")
}],
"loop": false,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_f3q33")
}, {
"duration": 1.0,
"texture": ExtResource("17_7y8xt")
}, {
"duration": 1.0,
"texture": ExtResource("18_rqnne")
}, {
"duration": 1.0,
"texture": ExtResource("19_unug7")
}, {
"duration": 1.0,
"texture": ExtResource("20_2ed41")
}, {
"duration": 1.0,
"texture": ExtResource("21_jd7p5")
}],
"loop": false,
"name": &"hit",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_8ksrf")
}, {
"duration": 1.0,
"texture": ExtResource("17_mckc5")
}, {
"duration": 1.0,
"texture": ExtResource("18_5tmlc")
}, {
"duration": 1.0,
"texture": ExtResource("19_7dr81")
}, {
"duration": 1.0,
"texture": ExtResource("20_sciys")
}, {
"duration": 1.0,
"texture": ExtResource("21_xok1n")
}, {
"duration": 1.0,
"texture": ExtResource("22_osqvv")
}, {
"duration": 1.0,
"texture": ExtResource("23_dp0gl")
}, {
"duration": 1.0,
"texture": ExtResource("24_mqhe2")
}, {
"duration": 1.0,
"texture": ExtResource("25_pkb6s")
}, {
"duration": 1.0,
"texture": ExtResource("26_0ca6u")
}, {
"duration": 1.0,
"texture": ExtResource("27_gqy0c")
}, {
"duration": 1.0,
"texture": ExtResource("28_vaklv")
}, {
"duration": 1.0,
"texture": ExtResource("29_cq7rq")
}, {
"duration": 1.0,
"texture": ExtResource("30_va7aa")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5tmlc"]
radius = 125.0
height = 794.0

[sub_resource type="Animation" id="Animation_7dr81"]
resource_name = "descend"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2.07053, 23.4254),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 400)]
}

[sub_resource type="Animation" id="Animation_sciys"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xok1n"]
resource_name = "ascend"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2.07053, 23.4254),
"update": 0,
"values": [Vector2(0, 400), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_osqvv"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 100), Vector2(0, 900)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.433333, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_osqvv"]
_data = {
&"RESET": SubResource("Animation_sciys"),
&"ascend": SubResource("Animation_xok1n"),
&"attack": SubResource("Animation_osqvv"),
&"descend": SubResource("Animation_7dr81")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_osqvv"]
bg_color = Color(0.870588, 0.870588, 0.870588, 0.65098)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dp0gl"]
bg_color = Color(0.572549, 0.054902, 0, 0.623529)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xok1n"]
size = Vector2(1109, 1551)

[node name="Scornus" type="CharacterBody2D"]
script = ExtResource("1_7dr81")

[node name="Node2D" parent="." instance=ExtResource("49_sciys")]
modulate = Color(1, 1, 1, 0)

[node name="Pivot" type="Node2D" parent="."]

[node name="ink" type="AnimatedSprite2D" parent="Pivot"]
position = Vector2(286, 453)
sprite_frames = SubResource("SpriteFrames_cq7rq")
animation = &"attack"
frame = 11
frame_progress = 1.0

[node name="body" type="AnimatedSprite2D" parent="Pivot"]
position = Vector2(213, 13)
sprite_frames = SubResource("SpriteFrames_1he7j")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.25065

[node name="HurtBox" type="Area2D" parent="Pivot"]
script = ExtResource("50_osqvv")
metadata/_custom_type_script = "uid://dktsel320mpw7"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/HurtBox"]
position = Vector2(-9, 14)
shape = SubResource("CapsuleShape2D_5tmlc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9, 14)
shape = SubResource("CapsuleShape2D_5tmlc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_osqvv")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_top = 50.0
offset_right = 500.0
offset_bottom = 182.0
grow_horizontal = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("50_xok1n")
theme_override_font_sizes/font_size = 60
text = "Remaining Boss Health"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/background = SubResource("StyleBoxFlat_osqvv")
theme_override_styles/fill = SubResource("StyleBoxFlat_dp0gl")
value = 50.0

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(-33.5, 328.5)
shape = SubResource("RectangleShape2D_xok1n")

[connection signal="area_entered" from="Pivot/HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
